.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727241000/admission-validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T15:11:53Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727241000.echo.example.com
  resourceVersion: "2227333"
  uid: 5808b7c5-6637-4688-9d96-e1083fabcd65
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmRENDQW1TZ0F3SUJBZ0lWQUozMTg1ajZSOEdoTnJ4OFVuTmFVZEdWVndDL01BMEdDU3FHU0liM0RRRUIKQ3dVQU1GUXhVakJRQmdOVkJBTU1TV1ZqYUc4dGMyMXZhMlV0WTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bApaQzB5TURJMk1EY3lOekkwTVRBd01DMWxZMmh2TFc5d1pYSmhkRzl5SUhkbFltaHZiMnNnUTBFd0hoY05Nall3Ck56STNNVFV4TVRVeVdoY05NamN3TnpJM01UVXhNVFV5V2pCVU1WSXdVQVlEVlFRRERFbGxZMmh2TFhOdGIydGwKTFdOdmJXSnBibVZrTFd4cGRtVXRZMjl0WW1sdVpXUXRNakF5TmpBM01qY3lOREV3TURBdFpXTm9ieTF2Y0dWeQpZWFJ2Y2lCM1pXSm [...]
    service:
      name: echo-smoke-combined-live-combined-20260727241000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727241000
      path: /validate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727241000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
